# samp-linux

./: .gitignore  CMakeLists.txt  README.md
cambalache/: main.cmb
src/: actions.c  actions.h  config.c  config.h  gtk-assets.h  main.c  main.h  path.c  path.h  string.c  string.h  window.c  window.h
usr/share/samp-linux/interface/: main.ui
